played about with the heading as spreading over 2 lines. Added box-sizing and nowrap to white space in hq1 element to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,8 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
+    box-sizing: border-box;
+    white-space: nowrap;
 }
 
 /* Menu styling (ID selector because it's an ID) */
@@ -118,6 +120,7 @@ footer {
 
     #menu {
         display: flex;
+        align-self: right;
     }
 
     /* to give padding around menu items */
@@ -128,6 +131,31 @@ footer {
 
 .nav-toggle-label {
     display: none;
+}
+
+/*to make bigger/more impact */
+
+#logo {
+    font-size: 280%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+}
+
+/* main content - to push down to allow space for logo above */
+
+main {
+    margin-top: 78px;
+
+}
+
+}
+
+/* media query for small laptops - interactivity/responsiveness on hyperlinks */
+
+@media screen and (min-width: 992px) {
+
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
 }
 
 }
